new mf create task

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://root:qPw6htszltdNa3AI@cluster0.ab1cd.mongodb.net/Mytasks?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://vladius29vladius:<Hqr25aGYC3epX>@cluster0.8krg46q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
