--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.1.4",
     "@prisma/client": "^5.15.0",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "mongodb": "^6.7.0",
     "next": "14.2.3",
     "prisma": "^5.15.0",
